# nanobind_example

./: CMakeLists.txt  repoduce.py
src/: foo.cpp  foo_bar.cpp  foo_bar.hpp
